--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_EMAILJS_SERVICE_ID=service_cc43il5
 VITE_EMAILJS_TEMPLATE_ID=template_srna6ku
 VITE_EMAILJS_PUBLIC_KEY=YoIFqAS7tODrhct93
+VITE_API_URL=https://arevei-backend.vercel.app
 
