--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.6",
